# sentiric-llm-gemini-service

./: Dockerfile  LOGIC.md  README.md  pyproject.toml
app/: main.py
app/core/: config.py  logging.py
