[tool.poetry]
name = "sentiric-llm-gemini-service"
version = "0.1.0"
description = "Expert LLM Engine based on Google Gemini API for fast, cloud-based text generation."
authors = ["Sentiric Team"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.3"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
structlog = "^24.2.0"
grpcio = "^1.64.1"

# KRİTİK EKLENTİ: Manuel REST çağrıları için asenkron HTTP istemcisi
httpx = "^0.27.0" 

# KRİTİK ZORLAMA: Protobuf 6.x standardını koru
protobuf = "^6.32.0" 

# Protobuf stubs (Adı düzeltildi)
sentiric-contracts-py = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.9.0" }


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
# httpx burada zaten ana bağımlılık olarak listelendiği için dev'den kaldırılabilir,
# ancak testler için tutulmasında sakınca yoktur.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"